- Inspection: Warn users if they have keyword arguments in sections that does not expect it (see #196)
- Inspection: Warn about usage of rule/checkpoint/subworkflow objects as arguments instead of one of its fields (see #257)
- Action: Correct Up/Down StatementMover for rule sections (see #174)
- Action: Show folding for multiline rule sections (input, output, etc) (see #314)

Fixed:
- Do not warn about 'touch' misuse in benchmark and log sections
- Completion does not suggest top-level keywords in comments (see #178)
- Suppress inspection doesn't work in some cases (see #313)
- Don't show multiline string arg, may be comma is missing for sections with single arg (see #315)
- Expected `collections.iterable` but got `output:` false positive (see #317)
- Expected type `Iterable` (..), git `input: ` instead (see #319)
- Expected type `Iterable` (..), git `input: ` instead (see #320)
- Workaround for: 'Shadows built-in name `input`' inspection on lambda parameters (see #133)
- Confusing 'Cannot check missing wildcards here.' warning (see #307)

Version 0.8.0 build #0.8.0.214
-------------
Released on July 3th 2020

Features:
- PyCharm 2020.2 builds compatibility


Version 0.7.0 build #0.7.0.209
-------------
Released on July 2th 2020

Features:
- Inspection: warn about confusing reference in localrules section (see #287)
- Inspection: Warn if mixed tabs and spaces (see #285)
- 'notebook' section parsing error (see #288)
- `envvars` isn't parsed properly (see #281)
- `container` top level and rule sections parsing (#291)
- Resolve/completion for paths in notebook section (see #289)
- Inspection: Conda environments are only allowed with shell, script, notebook,
    or wrapper directives (not with run). #290

Fixed:
- Rule not yet defined false positive for lambdas (see #286)
- Unresolved reference for 'rule' in 'run' section (see #283)
- Doesn't automatically create folding code element for "checkpoint" (see #273)